manifests/longhorn-system/longhorn-system/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: observability
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring 
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: prometheus
    ports:
    - protocol: TCP
      port: 9500
